--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="color-scheme" content="dark light" />
     <title>Delayedgram</title>
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="icon" href="/delayedgram.png" />
+    <link rel="preload" href="/script.js" as="script" />
+    <link rel="modulepreload" href="/invert-worker.js" />
+    <link rel="modulepreload" href="/grayscale-worker.js" />
     <link
       rel="preload"
       href="/invert.wasm"
@@ -21,9 +23,15 @@
       type="application/wasm"
       crossorigin="anonymous"
     />
-    <link rel="modulepreload" href="/worker.js" />
     <link rel="modulepreload" href="/invert.js" />
     <link rel="modulepreload" href="/grayscale.js" />
+    <link
+      rel="preload"
+      href="/delayedgram.png"
+      as="image"
+      fetchpriority="high"
+    />
+    <link rel="icon" href="/delayedgram.png" />
   </head>
   <body>
     <div class="wrapper">
