Prefetch Wasm instead of preloading

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="preload" href="/script.js" as="script" crossorigin="anonymous" />
     <link rel="modulepreload" href="/filter-worker.js" />
     <link
-      rel="preload"
+      rel="prefetch"
       href="/filter-invert.wasm"
       as="fetch"
       crossorigin="anonymous"
     />
     <link
-      rel="preload"
+      rel="prefetch"
       href="/filter-grayscale.wasm"
       as="fetch"
       crossorigin="anonymous"
