--- a/index.html
+++ b/index.html
@@ -6,29 +6,17 @@
     <meta name="color-scheme" content="dark light" />
     <title>Delayedgram</title>
     <link rel="stylesheet" href="/styles.css" />
-    <!--
-      <link rel="modulepreload" href="/filter-worker.js" />
-      <link rel="modulepreload" href="/filter-invert.js" />
-      <link rel="modulepreload" href="/filter-grayscale.js" />
-    -->
     <link
       rel="preload"
       href="/delayedgram.png"
       as="image"
       fetchpriority="high"
     />
-    <link
-      rel="prefetch"
-      href="/filter-invert.wasm"
-      as="fetch"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="prefetch"
-      href="/filter-grayscale.wasm"
-      as="fetch"
-      crossorigin="anonymous"
-    />
+    <link rel="prefetch" href="/filter-worker.js" />
+    <link rel="prefetch" href="/filter-invert.js" />
+    <link rel="prefetch" href="/filter-grayscale.js" />
+    <link rel="prefetch" href="/filter-invert.wasm" />
+    <link rel="prefetch" href="/filter-grayscale.wasm" />
     <link rel="icon" href="/delayedgram.png" />
   </head>
   <body>
